fixing an input problem

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -12,7 +12,7 @@
     <h1>CLIENT</h1></br></br>
     customerID: <input type="text" name="customerID"></br></br>
     rbCustomerID: <input type="text" name="rbCustomerID"></br></br>
-    companyName: <input type="text" name="comapnyName"></br></br>
+    companyName: <input type="text" name="companyName"></br></br>
     companyLocalID: <input type="text" name="companyLocalID"></br></br>
     companyLocalIDType: <input type="text" name="companyLocalIDType"></br></br>
     custTypeID: <input type="text" name="custTypeID"></br></br>
