--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -10,13 +10,13 @@
 
 <form name="full_form" method="POST" action='/'>
     <h1>CLIENT</h1></br></br>
-    customerID: <input type="text" name="customerID"></br></br>
+    customerID: <input type="number" name="customerID"></br></br>
     rbCustomerID: <input type="text" name="rbCustomerID"></br></br>
     companyName: <input type="text" name="companyName"></br></br>
     companyLocalID: <input type="text" name="companyLocalID"></br></br>
     companyLocalIDType: <input type="text" name="companyLocalIDType"></br></br>
-    custTypeID: <input type="text" name="custTypeID"></br></br>
-    startDate: <input type="text" name="startDate"></br></br>
+    custTypeID: <input type="number" name="custTypeID"></br></br>
+    startDate: <input type="date" name="startDate"></br></br>
     domicile: <input type="text" name="domicile"></br></br>
     <button type="submit" value="submit">Submit</button>
 </form> </br></br>
