--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -16,7 +16,7 @@
     companyLocalID: <input type="text" name="companyLocalID" maxlength="200" required></br></br>
     companyLocalIDType: <input type="text" name="companyLocalIDType" maxlength="100" required></br></br>
     custTypeID: <input type="number" name="custTypeID" required></br></br>
-    startDate: <input type="date" name="startDate" required></br></br>
+    startDate: <input type="date" name="startDate"></br></br>
     domicile: <input type="text" name="domicile" maxlength="2" required></br></br>
     <button type="submit" value="submit">Submit</button>
 </form> </br></br>
