--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -20,11 +20,9 @@
     domicile: <input type="text" name="domicile" maxlength="2" required></br></br></br></br>
 
     <label>paymentSchedule</label></br></br>
-    paymentScheduleID: <input type="number" name="paymentScheduleID" maxlength="11" required></br></br>
-    value: <input type="text" name="number" step="0.01" required></br></br>
+    value: <input type="number" name="value" step="0.01" required></br></br>
     frequency: <input type="number" name="frequency" required></br></br>
     firstPaymentDate: <input type="date" name="firstPaymentDate" required></br></br>
-    startDate: <input type="date" name="startDate" required></br></br>
     lastPaymentDate: <input type="date" name="lastPaymentDate" required></br></br>
     active: <input type="number" name="active" required></br></br>
     customerID: <input type="number" name="customerID" required></br></br>
