fixing a bug in sql syntax

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -20,12 +20,12 @@
     domicile: <input type="text" name="domicile" maxlength="2" required></br></br></br></br>
 
     <label>paymentSchedule</label></br></br>
-    value: <input type="number" name="value" step="0.01" required></br></br>
-    frequency: <input type="number" name="frequency" required></br></br>
-    firstPaymentDate: <input type="date" name="firstPaymentDate" required></br></br>
-    lastPaymentDate: <input type="date" name="lastPaymentDate" required></br></br>
-    active: <input type="number" name="active" required></br></br>
-    customerID: <input type="number" name="customerID" required></br></br>
+    paymentValue: <input type="number" name="paymentValue" ></br></br>
+    frequency: <input type="number" name="frequency" ></br></br>
+    firstPaymentDate: <input type="date" name="firstPaymentDate" ></br></br>
+    lastPaymentDate: <input type="date" name="lastPaymentDate" ></br></br>
+    active: <input type="number" name="active" ></br></br>
+    customerID: <input type="number" name="customerID" ></br></br>
     <button type="submit" value="submit">Submit</button></br></br></br></br>
 </form> </br></br>
 
