facilitate float values

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -20,8 +20,8 @@
     domicile: <input type="text" name="domicile" maxlength="2" required></br></br></br></br>
 
     <label>paymentSchedule</label></br></br>
-    paymentValue: <input type="number" name="paymentValue" ></br></br>
-    frequency: <input type="number" name="frequency" ></br></br>
+    paymentValue: <input type="number" name="paymentValue" step="0.01" ></br></br>
+    frequency: <input type="number" name="frequency" step="0.01"></br></br>
     firstPaymentDate: <input type="date" name="firstPaymentDate" ></br></br>
     lastPaymentDate: <input type="date" name="lastPaymentDate" ></br></br>
     active: <input type="number" name="active" ></br></br>
