amending the syntax so it mateches the new db

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -20,7 +20,7 @@
     domicile: <input type="text" name="domicile" maxlength="2" required></br></br></br></br>
 
     <label>paymentSchedule</label></br></br>
-    paymentValue: <input type="number" name="paymentValue" step="0.01" ></br></br>
+    value: <input type="number" name="value" step="0.01" ></br></br>
     frequency: <input type="number" name="frequency" step="0.01"></br></br>
     firstPaymentDate: <input type="date" name="firstPaymentDate" ></br></br>
     lastPaymentDate: <input type="date" name="lastPaymentDate" ></br></br>
