--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -35,7 +35,7 @@
     issueDate: <input type="date" name="issueDate"></br></br>
     validFrom: <input type="date" name="validFrom" ></br></br>
     validTo: <input type="date" name="validTo" ></br></br>
-    activationCode: <input type="text" name="activationCode" ></br></br>
+    activationCode: <input type="te" name="activationCode" ></br></br>
     paymentScheduleID: <input type="number" name="paymentScheduleID" ></br></br>
     customerID: <input type="number" name="customerID" ></br></br></br></br>
     <button type="submit" value="submit">Submit</button></br></br></br></br>
