removing dupicated/ spare part of code

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -37,7 +37,7 @@
     validTo: <input type="date" name="validTo" ></br></br>
     activationCode: <input type="te" name="activationCode" ></br></br>
     paymentScheduleID: <input type="number" name="paymentScheduleID" ></br></br>
-    customerID: <input type="number" name="customerID" ></br></br></br></br>
+<!--    customerID: <input type="number" name="customerID" ></br></br></br></br>
     <button type="submit" value="submit">Submit</button></br></br></br></br>
 </form> </br></br>
 
