checking why my commits don't get recorded

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -36,7 +36,7 @@
     validFrom: <input type="date" name="validFrom" ></br></br>
     validTo: <input type="date" name="validTo" ></br></br>
     activationCode: <input type="te" name="activationCode" ></br></br>
-    paymentScheduleID: <input type="number" name="paymentScheduleID" ></br></br>
+    paymentScheduleID: <input type="number" name="paymentScheduleID" ></br></br></br></br>
 
     <label>User</label></br></br>
 <!--    userID: <input type="number" name="userID"></br></br> -->
@@ -44,7 +44,7 @@
     username: <input type="text" maxlength="100" name="username"></br></br>
     city: <input type="text" maxlength="200" name="city" ></br></br>
     userDomicile: <input type="text" maxlength="2" name="userDomicile" ></br></br>
-    licenceID: <input type="number" name="licenceID" ></br></br>
+    licenceID: <input type="number" name="licenceID" ></br></br></br></br>
 
 
 
