contact section of the form in html

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -12,7 +12,7 @@
 
 <h1> Enter client's data </h1></br>
 
-<form name="full_form" method="POST" action='/'>
+<form class="pure-form" name="full_form" method="POST" action='/'>
     <label>Client</label></br></br>
 <!--    customerID: <input type="number" name="customerID"></br></br> -->
     rbCustomerID: <input type="text" name="rbCustomerID" maxlength="50" required></br></br>
@@ -50,7 +50,12 @@
     userDomicile: <input type="text" maxlength="2" name="userDomicile" ></br></br>
     licenceID: <input type="number" name="licenceID" ></br></br></br></br>
 
-
+    <label>Contact</label></br></br>
+    <!--    contactID: <input type="number" name="contactID"></br></br> -->
+    contactType: <input type="number" name="contactType"></br></br>
+    contactDetail: <input type="text" maxlength="500" name="contactDetail"></br></br>
+    customerID: <input type="number" name="customerID" ></br></br>
+    userID: <input type="number" name="userID"></br></br></br></br>
 
 
 
