adminuser section of the form in html

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -54,9 +54,14 @@
     <!--    contactID: <input type="number" name="contactID"></br></br> -->
     contactType: <input type="number" name="contactType"></br></br>
     contactDetail: <input type="text" maxlength="500" name="contactDetail"></br></br>
-    customerID: <input type="number" name="customerID" ></br></br>
     userID: <input type="number" name="userID"></br></br></br></br>
 
+    <label>AdminUser</label></br></br>
+    <!--    adminUserID: <input type="number" name="adminUserID"></br></br> -->
+    password: <input type="text" maxlength="200" name="password"></br></br>
+    paymentContact: <input type="number" name="paymentContact" maxlength="1"></br></br>
+    level: <input type="number" name="level" maxlength="4" ></br></br>
+    userID: <input type="number" name="userID" maxlength="11"></br></br></br></br>
 
 
 
