keyCode section of the html form

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -60,7 +60,14 @@
     <!--    adminUserID: <input type="number" name="adminUserID"></br></br> -->
     password: <input type="text" maxlength="200" name="password"></br></br>
     paymentContact: <input type="number" name="paymentContact" maxlength="1"></br></br>
-    level: <input type="number" name="level" maxlength="4" ></br></br>
+    level: <input type="number" name="level" maxlength="4" ></br></br></br></br>
+
+    <label>KeyCode</label></br></br>
+    <!--    keyCodeID: <input type="number" name="keyCodeID"></br></br> -->
+    keyCodeVersion: <input type="number" name="keyCodeVersion"></br></br>
+    keyCode: <input type="text" name="keyCode" maxlength="200"></br></br>
+    kodeActive: <input type="number" name="kodeActive"></br></br></br></br>
+    kodeActivationDate: <input type="date" name="kodeActivationDate"></br></br>
 
 
 
