--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -12,8 +12,8 @@
 
 <h1> Enter client's data </h1></br>
 
-<form class="pure-form" name="full_form" method="POST" action='/'>
-    <label>Client</label></br></br>
+<form class="pure-form" style="margin-left: auto margin-right: auto;" name="full_form" method="POST" action='/'>
+    <label class="form-lebel">Client</label></br></br>
 <!--    customerID: <input type="number" name="customerID"></br></br> -->
     rbCustomerID: <input type="text" name="rbCustomerID" maxlength="50" required></br></br>
     companyName: <input type="text" name="companyName" maxlength="200" required></br></br>
@@ -66,12 +66,9 @@
     <!--    keyCodeID: <input type="number" name="keyCodeID"></br></br> -->
     keyCodeVersion: <input type="number" name="keyCodeVersion"></br></br>
     keyCode: <input type="text" name="keyCode" maxlength="200"></br></br>
-    kodeActive: <input type="number" name="kodeActive"></br></br></br></br>
-    kodeActivationDate: <input type="date" name="kodeActivationDate"></br></br>
+    kodeActive: <input type="number" name="kodeActive"></br></br>
+    kodeActivationDate: <input type="date" name="kodeActivationDate"></br></br></br></br>
 
-
-
-<!--    customerID: <input type="number" name="customerID" ></br></br></br></br> -->
     <button type="submit" value="submit">Submit</button></br></br></br></br>
 </form> </br></br>
 
