--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,6 @@
 div {
-text-align: center;
+
 font-family: sans-serif;
-color: gray;
 padding-top: 10px;
 padding-bottom: 10px;
 margin-left: auto;
@@ -9,7 +8,13 @@ margin-right: auto;
 }
 
 
+
+
+.pure-form {
+
+}
+
 .form-lebel {
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 600;
 }
