--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,16 +5,18 @@ padding-top: 10px;
 padding-bottom: 10px;
 margin-left: auto;
 margin-right: auto;
-}
-
-
-
-
-.pure-form {
+text-align: center;
 
 }
 
-.form-lebel {
+
+
+
+.pure-form label {
     font-size: 20px;
     font-weight: 600;
+    margin-top: 0.5em;
+    margin-right: 0px;
+    margin-bottom: 0.2em;
+    margin-left: 50px;
 }
