--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -17,7 +17,7 @@
 <h1> Enter client's data </h1></br>
 
 <form class="pure-form" name="full_form" method="POST" action='/'>
-    <label class="form-lebel">Client</label></br></br>
+    <label >Client</label></br></br>
 <!--    customerID: <input type="number" name="customerID"></br></br> -->
     rbCustomerID: <input type="text" name="rbCustomerID" maxlength="50" required></br></br>
     companyName: <input type="text" name="companyName" maxlength="200" required></br></br>
@@ -27,7 +27,7 @@
     startDate: <input type="date" name="startDate"></br></br>
     domicile: <input type="text" name="domicile" maxlength="2" required></br></br></br></br>
 
-    <label class="form-lebel">PaymentSchedule</label></br></br>
+    <label >PaymentSchedule</label></br></br>
 <!--    paymentScheduleID: <input type="number" name="paymentScheduleID"></br></br> -->
     value: <input type="number" name="value" step="0.01" ></br></br>
     frequency: <input type="number" name="frequency" step="0.01"></br></br>
@@ -37,7 +37,7 @@
     customerID: <input type="number" name="customerID" ></br></br></br></br>
 
 
-    <label class="form-lebel">Licence</label></br></br>
+    <label >Licence</label></br></br>
 <!--    licenceID: <input type="number" name="licenceID"></br></br> -->
     type: <input type="number" name="type"></br></br>
     issueDate: <input type="date" name="issueDate"></br></br>
@@ -46,7 +46,7 @@
     activationCode: <input type="te" name="activationCode" ></br></br>
     paymentScheduleID: <input type="number" name="paymentScheduleID" ></br></br></br></br>
 
-    <label class="form-lebel">User</label></br></br>
+    <label >User</label></br></br>
 <!--    userID: <input type="number" name="userID"></br></br> -->
     userStartDate: <input type="date" name="userStartDate"></br></br>
     username: <input type="text" maxlength="100" name="username"></br></br>
@@ -54,19 +54,19 @@
     userDomicile: <input type="text" maxlength="2" name="userDomicile" ></br></br>
     licenceID: <input type="number" name="licenceID" ></br></br></br></br>
 
-    <label class="form-lebel">Contact</label></br></br>
+    <label >Contact</label></br></br>
     <!--    contactID: <input type="number" name="contactID"></br></br> -->
     contactType: <input type="number" name="contactType"></br></br>
     contactDetail: <input type="text" maxlength="500" name="contactDetail"></br></br>
     userID: <input type="number" name="userID"></br></br></br></br>
 
-    <label class="form-lebel">AdminUser</label></br></br>
+    <label >AdminUser</label></br></br>
     <!--    adminUserID: <input type="number" name="adminUserID"></br></br> -->
     password: <input type="text" maxlength="200" name="password"></br></br>
     paymentContact: <input type="number" name="paymentContact" maxlength="1"></br></br>
     level: <input type="number" name="level" maxlength="4" ></br></br></br></br>
 
-    <label class="form-lebel">KeyCode</label></br></br>
+    <label >KeyCode</label></br></br>
     <!--    keyCodeID: <input type="number" name="keyCodeID"></br></br> -->
     keyCodeVersion: <input type="number" name="keyCodeVersion"></br></br>
     keyCode: <input type="text" name="keyCode" maxlength="200"></br></br>
