--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -24,7 +24,7 @@
     companyName*: <input type="text" name="companyName" maxlength="200" required></br></br>
     companyLocalID*: <input type="text" name="companyLocalID" maxlength="200" required></br></br>
     companyLocalIDType*: <input type="text" name="companyLocalIDType" maxlength="100" required></br></br>
-    custTypeID: <input type="number" name="custTypeID" required></br></br>
+    custTypeID*: <input type="number" name="custTypeID" required></br></br>
     startDate: <input type="date" name="startDate"></br></br>
     domicile*: <input type="text" name="domicile" maxlength="2" required></br></br></br></br>
 
