a site to insert deta to user table only

--- a/templates/license_form.html
+++ b/templates/license_form.html
@@ -14,7 +14,7 @@
 
 <div>
 
-<form class="pure-form" method="POST" action="/license_form" name=="license_form">
+<form class="pure-form" method="POST" action="/license_form" name="license_form">
 
     <label >Licence</label></br></br>
 
