a site to insert data to userAdmin table only

--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -16,7 +16,7 @@
 
 <form class="pure-form" method="POST" action="/contact_form" name="contact_form">
 
-    <label>Add New Contact</label></br></br>
+    <label>Add New Contact</label></br></br></br></br>
     contactID: <input type="number" name="contactID" placeholder="generated automaticly" disabled></br></br>
     contactType*: <input type="number" name="contactType" placeholder= "takes '0' or '1'" required></br></br>
     contactDetail*: <input type="text" maxlength="500" name="contactDetail" required></br></br>
