a site to insert data to keycode table only

--- a/templates/customer_form.html
+++ b/templates/customer_form.html
@@ -17,7 +17,7 @@
 <h1> Customer Form </h1></br>
 
 <form class="pure-form" name="customer_form" method="POST" action='/'>
-    <label >Customer</label></br></br>
+    <label>Add New Customer</label></br></br></br></br>
 
     customerID: <input type="number" name="customerID" placeholder="generated automaticly" disabled><br><br>
     rbCustomerID*: <input type="text" name="rbCustomerID" maxlength="50" placeholder="must be unique" required></br></br>
