--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -17,7 +17,7 @@
 <h1> Enter client's data </h1></br>
 
 <form class="pure-form" name="full_form" method="POST" action='/'>
-    <label >Client</label></br></br>
+    <label>Customer</label></br></br>
 
     customerID: <input type="number" name="customerID" placeholder="generated automaticly" disabled><br><br>
     rbCustomerID*: <input type="text" name="rbCustomerID" maxlength="50" placeholder="must be unique" required></br></br>
