--- a/templates/license_form.html
+++ b/templates/license_form.html
@@ -16,7 +16,7 @@
 
 <form class="pure-form" method="POST" action="/license_form" name="license_form">
 
-    <label >Licence</label></br></br>
+    <label>Add New Licence</label></br></br></br></br>
 
         licenceID: <input type="number" name="licenceID" placeholder="generated automaticly" disabled></br></br>
         type*: <input type="number" name="type" placeholder= "takes '0' or '1'" required></br></br>
