--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -16,7 +16,7 @@
 
 <form class="pure-form" method="POST" action="/user_form" name="user_form">
 
-    <label >User</label></br></br>
+    <label>Add New User</label></br></br></br></br>
         userID: <input type="number" name="userID" placeholder="generated automaticly" disabled></br></br>
         userStartDate: <input type="date" name="userStartDate"></br></br>
         username*: <input type="text" maxlength="100" name="username" placeholder="must be unique" required></br></br>
