--- a/templates/paymentschedule_form.html
+++ b/templates/paymentschedule_form.html
@@ -15,7 +15,7 @@
 <div>
 
 <form class="pure-form" method="POST" action="/paymentschedule_form" name=="paymentschedule_form">
-    <label >PaymentSchedule</label></br></br>
+    <label> Add New PaymentSchedule</label></br></br></br></br>
         paymentScheduleID: <input type="number" name="paymentScheduleID" placeholder="generated automaticly" disabled></br></br>
         value*: <input type="number" name="value" step="0.01" required ></br></br>
         frequency in days*: <input type="number" name="frequency" step="0.01" required></br></br>
