button allowing to add new record to displasyed table

--- a/templates/all_customers.html
+++ b/templates/all_customers.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <head>
 
-<title>User Form</title>
+<title>All Customers</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +12,12 @@
 
 <body>
 
+    <h3>All Customers</h3><br><br>
+
+    <a href='/customer_form'><button>Add New</button></a>
+
 <div>
+
     <table>
         <tr>
             <th>customerID </th>
