--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-div {
+body {
 
 font-family: sans-serif;
 padding-top: 10px;
@@ -28,4 +28,21 @@ text-align: center;
 
     margin-left: 20px;
 
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+th {
+    border: solid 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+tr, td {
+    border: solid 1px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
