--- a/templates/all_customers.html
+++ b/templates/all_customers.html
@@ -14,7 +14,7 @@
 
     <h3>All Customers</h3><br><br>
 
-    <a href='/customer_form'><button>Add New</button></a>
+    <a href='/customer_form'><button>Add New</button></a><br><br>
 
 <div>
 
