--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,13 +36,17 @@ table {
     }
 
 th {
-    border: solid 2px;
+    border: solid 2px #ccc;
     padding-left: 5px;
     padding-right: 5px;
+    border-radius: 4px;
 }
 
-tr, td {
-    border: solid 1px;
-    padding-left: 5px;
-    padding-right: 5px;
-}
+
+td {
+   border: solid 1px #ccc;
+   padding-left: 5px;
+   padding-right: 5px;
+   padding-top: 7px;
+   padding-bottom: 7px;
+   border-radius: 4px;
