fixing a bug in the veriable naming

--- a/templates/licence_form.html
+++ b/templates/licence_form.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <head>
 
-<title>License Form</title>
+<title>Licence Form</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,7 +14,7 @@
 
 <div>
 
-<form class="pure-form" method="POST" action="/license_form" name="license_form">
+<form class="pure-form" method="POST" action="/licence_form" name="licence_form">
 
     <label>Add New Licence</label></br></br></br></br>
 
