--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -11,4 +11,15 @@
 </head>
 
 <body>
+<table>
+    <tr>
+        <td><a href='/all_customers'>Customers</a></td>
+        <td><a href='/all_paymentschedules'>Payment Schedules</a></td>
+        <td><a href='/all_licences'>Licenses</a></td>
+        <td><a href='/all_users'>Users</a></td>
+        <td><a href='/all_contacts'>Contacts</a></td>
+        <td><a href='/all_adminusers'>Admin Users</a></td>
+        <td><a href='/all_keycodes'>Key Codes</a></td>
+    </tr>
+<table>
 </body>
