--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -21,5 +21,15 @@
         <td><a href='/all_adminusers'>Admin Users</a></td>
         <td><a href='/all_keycodes'>Key Codes</a></td>
     </tr>
+ </table><br><br><br><br><br><br><br><br><br><br><br>
+
+ <table>
+
+    <tr>
+        <td><a href='/full_form'>New Entry - Full Form</a></td>
+    </tr>
+</table>
+
+
 <table>
 </body>
