--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -10,6 +10,8 @@
 
 </head>
 
+<h1> Rockenbrew CRM </h1>
+
 <body>
 <table>
     <tr>
@@ -21,14 +23,10 @@
         <td><a href='/all_adminusers'>Admin Users</a></td>
         <td><a href='/all_keycodes'>Key Codes</a></td>
     </tr>
- </table><br><br><br><br><br><br><br><br><br><br><br>
+ </table><br><br><br><br><br><br><br>
 
- <table>
+ <a href='/full_form'><button>New Entry - Full Form</button></a>
 
-    <tr>
-        <td><a href='/full_form'>New Entry - Full Form</a></td>
-    </tr>
-</table>
 
 
 <table>
