added a display of all recores to the home page@

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -25,7 +25,23 @@
     </tr>
  </table><br><br><br><br><br><br><br>
 
- <a href='/full_form'><button>New Entry - Full Form</button></a>
+ <a href='/full_form'><button>New Entry - Full Form</button></a><br><br><br>
+
+ <table>
+     <tr>
+         <td><a href='/all_customers'>Customers</a></td>
+         <td><a href='/all_paymentschedules'>Payment Schedules</a></td>
+         <td><a href='/all_licences'>Licenses</a></td>
+         <td><a href='/all_users'>Users</a></td>
+         <td><a href='/all_contacts'>Contacts</a></td>
+         <td><a href='/all_adminusers'>Admin Users</a></td>
+         <td><a href='/all_keycodes'>Key Codes</a></td>
+     </tr>
+  </table>
+
+
+
+
 
 
 
