table in html to display the results

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -27,17 +27,52 @@
 
  <a href='/full_form'><button>New Entry - Full Form</button></a><br><br><br>
 
+{% if results %}
  <table>
+    {% for result in results %}
      <tr>
-         <td><a href='/all_customers'>Customers</a></td>
-         <td><a href='/all_paymentschedules'>Payment Schedules</a></td>
-         <td><a href='/all_licences'>Licenses</a></td>
-         <td><a href='/all_users'>Users</a></td>
-         <td><a href='/all_contacts'>Contacts</a></td>
-         <td><a href='/all_adminusers'>Admin Users</a></td>
-         <td><a href='/all_keycodes'>Key Codes</a></td>
+         <td>{{result[0]}}</td>
+         <td>{{result[1]}}</td>
+         <td>{{result[2]}}</td>
+         <td>{{result[3]}}</td>
+         <td>{{result[4]}}</td>
+         <td>{{result[5]}}</td>
+         <td>{{result[6]}}</td>
+         <td>{{result[7]}}</td>
+         <td>{{result[8]}}</td>
+         <td>{{result[9]}}</td>
+         <td>{{result[10]}}</td>
+         <td>{{result[11]}}</td>
+         <td>{{result[12]}}</td>
+         <td>{{result[13]}}</td>
+         <td>{{result[14]}}</td>
+         <td>{{result[15]}}</td>
+         <td>{{result[16]}}</td>
+         <td>{{result[17]}}</td>
+         <td>{{result[18]}}</td>
+         <td>{{result[19]}}</td>
+         <td>{{result[20]}}</td>
+         <td>{{result[21]}}</td>
+         <td>{{result[22]}}</td>
+         <td>{{result[23]}}</td>
+         <td>{{result[24]}}</td>
+         <td>{{result[25]}}</td>
+         <td>{{result[26]}}</td>
+         <td>{{result[27]}}</td>
+         <td>{{result[28]}}</td>
+         <td>{{result[29]}}</td>
+         <td>{{result[30]}}</td>
+         <td>{{result[31]}}</td>
+         <td>{{result[32]}}</td>
+         <td>{{result[33]}}</td>
+         <td>{{result[34]}}</td>
+         <td>{{result[35]}}</td>
+         <td>{{result[36]}}</td>
+         <td>{{result[37]}}</td>
      </tr>
+     {% endfor %}
   </table>
+ {% endif %}
 
 
 
