changing the columns headers to more intuitional

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -37,37 +37,37 @@
         <th>companyLocalIDType</th>
         <th>custTypeID</th>
         <th>startDate</th>
-        <th>domicile</th>
+        <th>customerDomicile</th>
         <th>paymentScheduleID</th>
         <th>paymentValue</th>
         <th>paymentFrequency</th>
         <th>firstPaymentDate</th>
-        <th>startDate</th>
+        <th>paymentScheduleStartDate</th>
         <th>lastPaymentDate</th>
-        <th>active</th>
+        <th>paymentScheduleActive</th>
         <th>licenseID</th>
-        <th>type</th>
-        <th>issueDate</th>
-        <th>validFrom</th>
-        <th>validTo</th>
-        <th>activationCode</th>
+        <th>licenceType</th>
+        <th>licenceIssueDate</th>
+        <th>licenceValidFrom</th>
+        <th>licenceValidTo</th>
+        <th>licenceActivationCode</th>
         <th>userID</th>
-        <th>startDate</th>
+        <th>userStartDate</th>
         <th>username</th>
-        <th>city</th>
-        <th>domicile</th>
+        <th>userCity</th>
+        <th>userDomicile</th>
         <th>contactID</th>
-        <th>type</th>
-        <th>detail</th>
+        <th>contactType</th>
+        <th>contactDetail</th>
         <th>adminUserID</th>
-        <th>password</th>
-        <th>paymentContact</th>
-        <th>level</th>
+        <th>adminUserPassword</th>
+        <th>adminUserPaymentContact</th>
+        <th>adminUserLevel</th>
         <th>keyCodeID</th>
         <th>keyCodeVersion</th>
         <th>keyCode</th>
-        <th>kodeActive</th>
-        <th>date</th>
+        <th>keyCodeActive</th>
+        <th>keyCodeDate</th>
     </tr>
     {% for result in results %}
      <tr>
