fixing a bug in a variable name

--- a/templates/full_form.html
+++ b/templates/full_form.html
@@ -67,8 +67,8 @@
     keyCodeID: <input type="number" name="keyCodeID" placeholder="generated automaticly" disabled></br></br>
     keyCodeVersion*: <input type="number" name="keyCodeVersion" required></br></br>
     keyCode*: <input type="text" name="keyCode" maxlength="200" required></br></br>
-    kodeActive*: <input type="number" name="kodeActive" placeholder="type '0' for 'no' and '1' for 'yes'" required></br></br>
-    kodeActivationDate: <input type="date" name="kodeActivationDate"></br></br></br></br>
+    codeActive*: <input type="number" name="codeActive" placeholder="type '0' for 'no' and '1' for 'yes'" required></br></br>
+    codeActivationDate: <input type="date" name="codeActivationDate"></br></br></br></br>
 
     <button type="submit" value="submit">Submit</button></br></br></br></br>
 </form> </br></br>
