--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -25,7 +25,7 @@
     </tr>
  </table><br><br><br><br><br><br><br>
 
- {% if query_specific_record %}
+ {% if spcific_record_all_tables %}
   <table>
      <tr>
          <th>customerID</th>
@@ -67,7 +67,7 @@
          <th>keyCodeActive</th>
          <th>keyCodeDate</th>
      </tr>
-     {% for result in query_specific_record %}
+     {% for result in spcific_record_all_tables %}
       <tr>
           <td>{{result[0]}}</td>
           <td>{{result[1]}}</td>
