html form to input the name of the company who's records user wnts to see

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -25,6 +25,11 @@
     </tr>
  </table><br><br><br><br><br><br><br>
 
+ <form action='/' method='POST'>
+     Inser a name of the company:
+     <input type='text' name='search_input'></input>
+</form>
+
  {% if spcific_record_all_tables %}
   <table>
      <tr>
