--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -32,6 +32,7 @@
          <form action='/' method='POST' name='search_input_form'>
              Insert the name of the company:
              <input type='text' name='search_input'></input>
+             <button type="submit" value="submit">Search</button>
         </form>
     </div>
 
