added a search by rbCustomerID as well

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -30,7 +30,7 @@
 
     <div>
          <form action='/' method='POST' name='search_input_form'>
-             Insert the name of the company:
+             Insert companyName or rbCustomerID:
              <input type='text' name='search_input'></input>
              <button type="submit" value="submit">Search</button>
         </form>
