added a function to render an edit page for each record

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -81,6 +81,7 @@
          </tr>
          {% for result in spcific_record_all_tables %}
           <tr>
+              <td><a href="/full_form"><button>edit</button></a></td>
               <td>{{result[0]}}</td>
               <td>{{result[1]}}</td>
               <td>{{result[2]}}</td>
