--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -40,6 +40,7 @@
      {% if spcific_record_all_tables %}
       <table>
          <tr>
+             <th></th>
              <th>customerID</th>
              <th>rbCustomerID</th>
              <th>companyName</th>
@@ -81,7 +82,7 @@
          </tr>
          {% for result in spcific_record_all_tables %}
           <tr>
-              <td><a href="/full_form"><button>edit</button></a></td>
+              <td><a href="edit_record/{{result[0]}}"><button>edit</button></a></td>
               <td>{{result[0]}}</td>
               <td>{{result[1]}}</td>
               <td>{{result[2]}}</td>
