giving up the rowspan idea

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -111,9 +111,14 @@
               <td rowspan='{{rowspan}}'>{{result[25]}}</td>
               <td rowspan='{{rowspan}}'>{{result[26][0]}}</td>
 
-              <td rowspan='{{rowspan}}'>{% for value in result[27] %} {{value}} </br></br> {% endfor %}</td>
+              <td>{% for value in result[27] %} <div style="border-top: solid 1px #ccc; padding-top: 7px;">{{value}}</div> {% endfor %}</td>
+              <td>{% for value in result[28] %} <div style="border-top: solid 1px #ccc; padding-top: 7px;">{{value}}</div> {% endfor %}</td>
 
-              <td rowspan='{{rowspan}}'>{% for value in result[28] %} {{value}} </br></br> {% endfor %}</td>
+
+
+
+
+
               <td rowspan='{{rowspan}}'>{{result[29][0]}}</td>
               <td rowspan='{{rowspan}}'>{{result[30]}}</td>
               <td rowspan='{{rowspan}}'>{{result[31]}}</td>
