--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -7,7 +7,12 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
-
+<style>
+div.cell_div {
+    border-top: solid 1px #ccc;
+    padding-top: 7px;
+}
+</style>
 </head>
 
 <h1> Rockenbrew CRM </h1>
@@ -111,8 +116,8 @@
               <td rowspan='{{rowspan}}'>{{result[25]}}</td>
               <td rowspan='{{rowspan}}'>{{result[26][0]}}</td>
 
-              <td>{% for value in result[27] %} <div style="border-top: solid 1px #ccc; padding-top: 7px;">{{value}}</div> {% endfor %}</td>
-              <td>{% for value in result[28] %} <div style="border-top: solid 1px #ccc; padding-top: 7px;">{{value}}</div> {% endfor %}</td>
+              <td>{% for value in result[27] %} <div class="cell_div">{{value}}</div> {% endfor %}</td>
+              <td>{% for value in result[28] %} <div class="cell_div">{{value}}</div> {% endfor %}</td>
 
 
 
