--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -42,7 +42,7 @@ div.cell_div {
     </div>
 
     <div>
-     {% if spcific_record_all_tables, rowspan%}
+     {% if spcific_record_all_tables%}
       <table>
          <tr>
              <th></th>
